--- a/article/templates/blog_nav.html
+++ b/article/templates/blog_nav.html
@@ -23,7 +23,7 @@
                   </ul>
                 </li>
                 <li><a href="{% url 'blog:archive' %}">文章归档</a></li>
-                {% if user.is_authenticated %}
+                {% if request.user.is_staff %}
                 <li><a href="{% url 'blog:article_publish' %}">写文章</a></li>
                 {% endif %}
                 <li><a href="{% url 'blog:about' %}">关于</a></li>
